SERVER-13825 Close connections for which we can't allocate a thread